[package]
name = "ssh-action-wasm"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# debug = false
strip = true
lto = "fat"
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.92"
clg = "0.0.3"
shlex = { version = "1.3.0", default-features = false }
log = "0.4.21"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
